MIR-842 fixes layout issue of search origin badge

--- a/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/bootstrap4fix.scss
+++ b/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/bootstrap4fix.scss
@@ -68,6 +68,18 @@ li.dropdown-item {
   min-width: 320px;
 }
 
+.mcr-badge--origin {
+  z-index: 100;
+  margin-right: 5px;
+  align-self: center;
+  .feedback {
+    .feedback-clean {
+      color: white;
+      margin-left: 5px;
+    }
+  }
+}
+
 // Large devices (desktops) and below
 @include media-breakpoint-down(lg) {
     // add/overwrite styles for responsive level lg and lower
